# htm5

./: Makefile  README.md  docker-compose.yml
db/: setup-schema.sh
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
server/db/: Dockerfile
server/src/: main.rs
server/src/api/: db.rs  errors.rs  filters.rs  genius.rs  handlers.rs  mod.rs  models.rs
web/: README.md  package.json
web/public/: index.html
web/src/: App.tsx
