[package]
name = "server"
version = "0.1.0"
authors = ["Ed <tardisman5197@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.0"
tokio = { version = "0.2", features=["macros"]}
serde = { version = "1.0", features = ["derive"] }